--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -86,8 +86,6 @@
   "console.components.gateway-data-form.index.scheduleAnyTimeDescription": "Configure gateway delay (minimum: {minimumValue}ms, default: {defaultValue}ms)",
   "console.components.gateway-data-form.index.miliseconds": "miliseconds",
   "console.components.gateway-data-form.index.seconds": "seconds",
-  "console.components.gateway-data-form.index.minutes": "minutes",
-  "console.components.gateway-data-form.index.hours": "hours",
   "console.components.gateway-data-form.index.delayWarning": "Delay too short. The lower bound ({minimumValue}ms) will be used by the Gateway Server.",
   "console.components.location-form.index.deleteWarning": "Are you sure you want to delete this location entry?",
   "console.components.location-form.index.deleteLocation": "Remove location entry",
@@ -520,6 +518,7 @@
   "lib.shared-messages.hardwareVersion": "Hardware version",
   "lib.shared-messages.homeNetID": "Home NetID",
   "lib.shared-messages.homeNetIDDescription": "ID to identify the LoRaWAN network",
+  "lib.shared-messages.hours": "hours",
   "lib.shared-messages.id": "ID",
   "lib.shared-messages.import": "Import",
   "lib.shared-messages.importDevices": "Import end devices",
@@ -549,6 +548,8 @@
   "lib.shared-messages.macVersionDescription": "The LoRaWAN version (MAC), as provided by the device manufacturer",
   "lib.shared-messages.messages": "Messages",
   "lib.shared-messages.messageTypes": "Message types",
+  "lib.shared-messages.milliseconds": "milliseconds",
+  "lib.shared-messages.minutes": "minutes",
   "lib.shared-messages.model": "Model",
   "lib.shared-messages.moreInformation": "More information",
   "lib.shared-messages.mqtt": "MQTT",
@@ -616,6 +617,7 @@
   "lib.shared-messages.rootKeys": "Root keys",
   "lib.shared-messages.saveChanges": "Save changes",
   "lib.shared-messages.searchById": "Search by ID",
+  "lib.shared-messages.seconds": "seconds",
   "lib.shared-messages.secure": "Secure",
   "lib.shared-messages.settings": "Settings",
   "lib.shared-messages.skipCryptoDescription": "Skip decryption of uplink payloads and encryption of downlink payloads",
