--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -86,8 +86,6 @@
   "console.components.gateway-data-form.index.scheduleAnyTimeDescription": "Xxxxxxxxx xxxxxxx xxxxx (xxxxxxx: {minimumValue}xx, xxxxxxx: {defaultValue}xx)",
   "console.components.gateway-data-form.index.miliseconds": "xxxxxxxxxxx",
   "console.components.gateway-data-form.index.seconds": "xxxxxxx",
-  "console.components.gateway-data-form.index.minutes": "xxxxxxx",
-  "console.components.gateway-data-form.index.hours": "xxxxx",
   "console.components.gateway-data-form.index.delayWarning": "Xxxxx xxx xxxxx. Xxx xxxxx xxxxx ({minimumValue}xx) xxxx xx xxxx xx xxx Xxxxxxx Xxxxxx.",
   "console.components.location-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxxxxx xxxxx?",
   "console.components.location-form.index.deleteLocation": "Xxxxxx xxxxxxxx xxxxx",
@@ -520,6 +518,7 @@
   "lib.shared-messages.hardwareVersion": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.homeNetID": "Xxxx XxxXX",
   "lib.shared-messages.homeNetIDDescription": "XX xx xxxxxxxx xxx XxXxXXX xxxxxxx",
+  "lib.shared-messages.hours": "xxxxx",
   "lib.shared-messages.id": "XX",
   "lib.shared-messages.import": "Xxxxxx",
   "lib.shared-messages.importDevices": "Xxxxxx xxx xxxxxxx",
@@ -549,6 +548,8 @@
   "lib.shared-messages.macVersionDescription": "Xxx XxXxXXX xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.messages": "Xxxxxxxx",
   "lib.shared-messages.messageTypes": "Xxxxxxx xxxxx",
+  "lib.shared-messages.milliseconds": "xxxxxxxxxxxx",
+  "lib.shared-messages.minutes": "xxxxxxx",
   "lib.shared-messages.model": "Xxxxx",
   "lib.shared-messages.moreInformation": "Xxxx xxxxxxxxxxx",
   "lib.shared-messages.mqtt": "XXXX",
@@ -616,6 +617,7 @@
   "lib.shared-messages.rootKeys": "Xxxx xxxx",
   "lib.shared-messages.saveChanges": "Xxxx xxxxxxx",
   "lib.shared-messages.searchById": "Xxxxxx xx XX",
+  "lib.shared-messages.seconds": "xxxxxxx",
   "lib.shared-messages.secure": "Xxxxxx",
   "lib.shared-messages.settings": "Xxxxxxxx",
   "lib.shared-messages.skipCryptoDescription": "Xxxx xxxxxxxxxx xx xxxxxx xxxxxxxx xxx xxxxxxxxxx xx xxxxxxxx xxxxxxxx",
