oauth: Fix oauth messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -711,10 +711,10 @@
   "oauth.views.login.index.createAccount": "Create an account",
   "oauth.views.login.index.forgotPassword": "Forgot password?",
   "oauth.views.login.index.loginToContinue": "Please login to continue",
-  "oauth.views.update-password.index.newPassword": "New Password",
-  "oauth.views.update-password.index.oldPassword": "Old Password",
+  "oauth.views.update-password.index.newPassword": "New password",
+  "oauth.views.update-password.index.oldPassword": "Old password",
   "oauth.views.update-password.index.passwordChanged": "Password changed",
-  "oauth.views.update-password.index.revokeAccess": "Revoke Access",
+  "oauth.views.update-password.index.revokeAccess": "Revoke access",
   "oauth.views.update-password.index.logoutAllDevices": "Log out from all end devices",
   "oauth.views.update-password.index.revokeWarning": "This will revoke access from all logged in devices",
   "oauth.views.update-password.index.sessionRevoked": "Session revoked",
