--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -711,10 +711,10 @@
   "oauth.views.login.index.createAccount": "Xxxxxx xx xxxxxxx",
   "oauth.views.login.index.forgotPassword": "Xxxxxx xxxxxxxx?",
   "oauth.views.login.index.loginToContinue": "Xxxxxx xxxxx xx xxxxxxxx",
-  "oauth.views.update-password.index.newPassword": "Xxx Xxxxxxxx",
-  "oauth.views.update-password.index.oldPassword": "Xxx Xxxxxxxx",
+  "oauth.views.update-password.index.newPassword": "Xxx xxxxxxxx",
+  "oauth.views.update-password.index.oldPassword": "Xxx xxxxxxxx",
   "oauth.views.update-password.index.passwordChanged": "Xxxxxxxx xxxxxxx",
-  "oauth.views.update-password.index.revokeAccess": "Xxxxxx Xxxxxx",
+  "oauth.views.update-password.index.revokeAccess": "Xxxxxx xxxxxx",
   "oauth.views.update-password.index.logoutAllDevices": "Xxx xxx xxxx xxx xxx xxxxxxx",
   "oauth.views.update-password.index.revokeWarning": "Xxxx xxxx xxxxxx xxxxxx xxxx xxx xxxxxx xx xxxxxxx",
   "oauth.views.update-password.index.sessionRevoked": "Xxxxxxx xxxxxxx",
