--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -269,7 +269,7 @@
   "console.views.device-add.configuration-form.index.preparation": "Xxxxxxxxxxx",
   "console.views.device-add.index.title": "Xxx xxx xxx xxxxxx",
   "console.views.device-add.messages.basicTitle": "Xxxxx xxxxxxxx",
-  "console.views.device-add.messages.basicDescription": "Xxxxxxx xxxxxxxx xx xxx xxx xxxxxx. Xxx xxxxxx XX'x, Xxxx xxx Xxxxxxxxxxx",
+  "console.views.device-add.messages.basicDescription": "Xxx xxxxxx XX'x, Xxxx xxx Xxxxxxxxxxx",
   "console.views.device-add.messages.basicDetails": "Xxxxxxx xxxxxxx xxxxxxxx xx xx xxx xxxxxx",
   "console.views.device-add.messages.networkTitle": "Xxxxxxx xxxxx xxxxxxxx",
   "console.views.device-add.messages.networkDescription": "Xxxxxxxxx xxxx, xxxxxxxx xxxxxxxxxx, xxx xxxxxx xxxxx xxx xxxxxxx xxxx.",
