console: Add create user page

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -206,8 +206,6 @@
   "console.containers.webhooks-table.index.format": "Format",
   "console.containers.webhooks-table.index.baseUrl": "Base URL",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
-  "console.views.admin-user-management-edit.index.updateFailure": "There was an error and the user could not be updated",
-  "console.views.admin-user-management-edit.index.deleteFailure": "There was an error and the user could not be deleted",
   "console.views.admin-user-management-edit.index.deleteSuccess": "User deleted",
   "console.views.application-add.index.applicationName": "Application name",
   "console.views.application-add.index.appIdPlaceholder": "my-new-application",
@@ -647,6 +645,7 @@
   "lib.shared-messages.uplinksReceived": "Uplinks received",
   "lib.shared-messages.unexposed": "Unexposed",
   "lib.shared-messages.user": "User",
+  "lib.shared-messages.userAdd": "Add user",
   "lib.shared-messages.userDelete": "Delete user",
   "lib.shared-messages.userEdit": "Edit user",
   "lib.shared-messages.userId": "User ID",
