--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -206,8 +206,6 @@
   "console.containers.webhooks-table.index.format": "Xxxxxx",
   "console.containers.webhooks-table.index.baseUrl": "Xxxx XXX",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
-  "console.views.admin-user-management-edit.index.updateFailure": "Xxxxx xxx xx xxxxx xxx xxx xxxx xxxxx xxx xx xxxxxxx",
-  "console.views.admin-user-management-edit.index.deleteFailure": "Xxxxx xxx xx xxxxx xxx xxx xxxx xxxxx xxx xx xxxxxxx",
   "console.views.admin-user-management-edit.index.deleteSuccess": "Xxxx xxxxxxx",
   "console.views.application-add.index.applicationName": "Xxxxxxxxxxx xxxx",
   "console.views.application-add.index.appIdPlaceholder": "xx-xxx-xxxxxxxxxxx",
@@ -647,6 +645,7 @@
   "lib.shared-messages.uplinksReceived": "Xxxxxxx xxxxxxxx",
   "lib.shared-messages.unexposed": "Xxxxxxxxx",
   "lib.shared-messages.user": "Xxxx",
+  "lib.shared-messages.userAdd": "Xxx xxxx",
   "lib.shared-messages.userDelete": "Xxxxxx xxxx",
   "lib.shared-messages.userEdit": "Xxxx xxxx",
   "lib.shared-messages.userId": "Xxxx XX",
