dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -194,6 +194,13 @@
   "console.containers.gateways-table.index.ownedTabTitle": "Owned gateways",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Prefixes unavailable",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
+  "console.containers.lora-cloud-form.index.token": "Token",
+  "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
+  "console.containers.lora-cloud-form.index.deleteToken": "Delete token",
+  "console.containers.lora-cloud-form.index.deleteWarning": "Are you sure you want to delete the current token? This action cannot be undone.",
+  "console.containers.lora-cloud-form.index.tokenUpdated": "Token updated",
+  "console.containers.lora-cloud-form.index.tokenDeleted": "Token deleted",
+  "console.containers.lora-cloud-form.index.setToken": "Set token",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "There was an error and the list of organizations could not be displayed",
   "console.containers.pubsub-formats-select.index.title": "Pub/Sub format",
@@ -222,6 +229,11 @@
   "console.views.application-general-settings.index.deleteApp": "Delete application",
   "console.views.application-general-settings.index.modalWarning": "Are you sure you want to delete \"{appName}\"? This action cannot be undone and it will not be possible to reuse the application ID.",
   "console.views.application-general-settings.index.updateSuccess": "Application updated",
+  "console.views.application-integrations-lora-cloud.index.loRaCloudDeviceManagement": "LoRa Cloud Device Management",
+  "console.views.application-integrations-lora-cloud.index.officialLoRaCloudDocumentation": "Official LoRa Cloud documentation",
+  "console.views.application-integrations-lora-cloud.index.loRaCloudInfoText": "With the LoRa Cloud Device & Application Services protocol, you can manage common device functionality at the application layer for LoRaWAN®-enabled devices. This protocol consists of a set of messages that are exchanged on a predefined device management LoRaWAN port (199 by default). The purpose of these messages is three-fold:\n<ol><li>Periodically communicate info messages</li><li>Trigger client-initiated management commands</li><li>Run advanced, application-layer protocols which solve common LoRaWAN use cases</li></ol>",
+  "console.views.application-integrations-lora-cloud.index.furtherResources": "Further resources",
+  "console.views.application-integrations-lora-cloud.index.setToken": "Set LoRa Cloud token",
   "console.views.application-integrations-mqtt.index.publicAddress": "Public address",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Public TLS address",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Generate new API key",
@@ -538,6 +550,7 @@
   "lib.shared-messages.logout": "Logout",
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The east-west position in degrees, where 0 is the prime meridian (Greenwich)",
+  "lib.shared-messages.loraCloud": "LoRa Cloud",
   "lib.shared-messages.lorawanInformation": "LoRaWAN information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
   "lib.shared-messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
