--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -194,6 +194,13 @@
   "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
+  "console.containers.lora-cloud-form.index.token": "Xxxxx",
+  "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
+  "console.containers.lora-cloud-form.index.deleteToken": "Xxxxxx xxxxx",
+  "console.containers.lora-cloud-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxxxxx xxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx.",
+  "console.containers.lora-cloud-form.index.tokenUpdated": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-form.index.tokenDeleted": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-form.index.setToken": "Xxx xxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "Xxx/Xxx xxxxxx",
@@ -222,6 +229,11 @@
   "console.views.application-general-settings.index.deleteApp": "Xxxxxx xxxxxxxxxxx",
   "console.views.application-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{appName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxxxxxx XX.",
   "console.views.application-general-settings.index.updateSuccess": "Xxxxxxxxxxx xxxxxxx",
+  "console.views.application-integrations-lora-cloud.index.loRaCloudDeviceManagement": "XxXx Xxxxx Xxxxxx Xxxxxxxxxx",
+  "console.views.application-integrations-lora-cloud.index.officialLoRaCloudDocumentation": "Xxxxxxxx XxXx Xxxxx xxxxxxxxxxxxx",
+  "console.views.application-integrations-lora-cloud.index.loRaCloudInfoText": "Xxxx xxx XxXx Xxxxx Xxxxxx x Xxxxxxxxxxx Xxxxxxxx xxxxxxxx, xxx xxx xxxxxx xxxxxx xxxxxx xxxxxxxxxxxxx xx xxx xxxxxxxxxxx xxxxx xxx XxXxXXXx-xxxxxxx xxxxxxx. Xxxx xxxxxxxx xxxxxxxx xx x xxx xx xxxxxxxx xxxx xxx xxxxxxxxx xx x xxxxxxxxxx xxxxxx xxxxxxxxxx XxXxXXX xxxx (xxx xx xxxxxxx). Xxx xxxxxxx xx xxxxx xxxxxxxx xx xxxxx-xxxx:\nxxxxxxxxXxxxxxxxxxxx xxxxxxxxxxx xxxx xxxxxxxxx/xxxxxxxXxxxxxx xxxxxx-xxxxxxxxx xxxxxxxxxx xxxxxxxxx/xxxxxxxXxx xxxxxxxx, xxxxxxxxxxx-xxxxx xxxxxxxxx xxxxx xxxxx xxxxxx XxXxXXX xxx xxxxxx/xxxx/xxx",
+  "console.views.application-integrations-lora-cloud.index.furtherResources": "Xxxxxxx xxxxxxxxx",
+  "console.views.application-integrations-lora-cloud.index.setToken": "Xxx XxXx Xxxxx xxxxx",
   "console.views.application-integrations-mqtt.index.publicAddress": "Xxxxxx xxxxxxx",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Xxxxxx XXX xxxxxxx",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Xxxxxxxx xxx XXX xxx",
@@ -538,6 +550,7 @@
   "lib.shared-messages.logout": "Xxxxxx",
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx xxxx-xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx xxxxx xxxxxxxx (Xxxxxxxxx)",
+  "lib.shared-messages.loraCloud": "XxXx Xxxxx",
   "lib.shared-messages.lorawanInformation": "XxXxXXX xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX xxxxxxx",
   "lib.shared-messages.lorawanPhyVersionDescription": "Xxx XxXxXXX XXX xxxxxxx xx xxx xxx xxxxxx",
