dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -159,7 +159,7 @@
   "console.components.webhook-template-form.index.createTemplate": "Create {template} webhook",
   "console.components.webhook-template-form.index.idPlaceholder": "my-new-{templateId}-webhook",
   "console.components.webhook-template-form.index.templateSettings": "Template settings",
-  "console.components.webhook-template-info.index.moreInfo": "More info",
+  "console.components.webhook-template-info.index.about": "About {name}",
   "console.components.webhook-template-info.index.documentation": "Documentation",
   "console.components.webhook-template-info.index.templateInformation": "Template information",
   "console.containers.api-keys-table.index.keyId": "Key ID",
@@ -225,7 +225,7 @@
   "console.views.application-integrations-mqtt.index.publicAddress": "Public address",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Public TLS address",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Generate new API key",
-  "console.views.application-integrations-mqtt.index.viewApiKeys": "View API keys",
+  "console.views.application-integrations-mqtt.index.goToApiKeys": "Go to API keys",
   "console.views.application-integrations-mqtt.index.mqttInfoText": "The Application Server exposes an MQTT server to work with streaming events. In order to use the MQTT server you need to create a new API key, which will function as connection password. You can also use an existing API key, as long as it has the necessary rights granted. Use the connection information below to connect.",
   "console.views.application-integrations-mqtt.index.connectionCredentials": "Connection credentials",
   "console.views.application-integrations-mqtt.index.mqttIntegrations": "MQTT integrations",
@@ -320,6 +320,7 @@
   "console.views.device-overview.index.keysNotExposed": "Keys are not exposed",
   "console.views.device-payload-formatters.index.infoUplinkText": "These payload formatters are executed on uplink messages from this end device and take precedence over application level payload formatters.",
   "console.views.device-payload-formatters.index.infoDownlinkText": "These payload formatters are executed on downlink messages to this end device and take precedence over application level payload formatters.",
+  "console.views.error.index.backToOverview": "Back to the overview",
   "console.views.gateway-add.index.createGateway": "Create gateway",
   "console.views.gateway-data.index.gtwData": "Gateway data",
   "console.views.gateway-general-settings.index.updateSuccess": "Gateway updated",
@@ -602,7 +603,6 @@
   "lib.shared-messages.pubsubs": "Pub/Subs",
   "lib.shared-messages.redirecting": "Redirecting…",
   "lib.shared-messages.refresh": "Refresh",
-  "lib.shared-messages.refreshPage": "Refresh page",
   "lib.shared-messages.removeCollaborator": "Remove collaborator",
   "lib.shared-messages.resetsFCnt": "Resets frame counters",
   "lib.shared-messages.resetsJoinNonces": "Resets join nonces",
