--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -159,7 +159,7 @@
   "console.components.webhook-template-form.index.createTemplate": "Xxxxxx {template} xxxxxxx",
   "console.components.webhook-template-form.index.idPlaceholder": "xx-xxx-{templateId}-xxxxxxx",
   "console.components.webhook-template-form.index.templateSettings": "Xxxxxxxx xxxxxxxx",
-  "console.components.webhook-template-info.index.moreInfo": "Xxxx xxxx",
+  "console.components.webhook-template-info.index.about": "Xxxxx {name}",
   "console.components.webhook-template-info.index.documentation": "Xxxxxxxxxxxxx",
   "console.components.webhook-template-info.index.templateInformation": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.api-keys-table.index.keyId": "Xxx XX",
@@ -225,7 +225,7 @@
   "console.views.application-integrations-mqtt.index.publicAddress": "Xxxxxx xxxxxxx",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Xxxxxx XXX xxxxxxx",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Xxxxxxxx xxx XXX xxx",
-  "console.views.application-integrations-mqtt.index.viewApiKeys": "Xxxx XXX xxxx",
+  "console.views.application-integrations-mqtt.index.goToApiKeys": "Xx xx XXX xxxx",
   "console.views.application-integrations-mqtt.index.mqttInfoText": "Xxx Xxxxxxxxxxx Xxxxxx xxxxxxx xx XXXX xxxxxx xx xxxx xxxx xxxxxxxxx xxxxxx. Xx xxxxx xx xxx xxx XXXX xxxxxx xxx xxxx xx xxxxxx x xxx XXX xxx, xxxxx xxxx xxxxxxxx xx xxxxxxxxxx xxxxxxxx. Xxx xxx xxxx xxx xx xxxxxxxx XXX xxx, xx xxxx xx xx xxx xxx xxxxxxxxx xxxxxx xxxxxxx. Xxx xxx xxxxxxxxxx xxxxxxxxxxx xxxxx xx xxxxxxx.",
   "console.views.application-integrations-mqtt.index.connectionCredentials": "Xxxxxxxxxx xxxxxxxxxxx",
   "console.views.application-integrations-mqtt.index.mqttIntegrations": "XXXX xxxxxxxxxxxx",
@@ -320,6 +320,7 @@
   "console.views.device-overview.index.keysNotExposed": "Xxxx xxx xxx xxxxxxx",
   "console.views.device-payload-formatters.index.infoUplinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
   "console.views.device-payload-formatters.index.infoDownlinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
+  "console.views.error.index.backToOverview": "Xxxx xx xxx xxxxxxxx",
   "console.views.gateway-add.index.createGateway": "Xxxxxx xxxxxxx",
   "console.views.gateway-data.index.gtwData": "Xxxxxxx xxxx",
   "console.views.gateway-general-settings.index.updateSuccess": "Xxxxxxx xxxxxxx",
@@ -602,7 +603,6 @@
   "lib.shared-messages.pubsubs": "Xxx/Xxxx",
   "lib.shared-messages.redirecting": "Xxxxxxxxxxxx",
   "lib.shared-messages.refresh": "Xxxxxxx",
-  "lib.shared-messages.refreshPage": "Xxxxxxx xxxx",
   "lib.shared-messages.removeCollaborator": "Xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.resetsFCnt": "Xxxxxx xxxxx xxxxxxxx",
   "lib.shared-messages.resetsJoinNonces": "Xxxxxx xxxx xxxxxx",
