console,oauth: Fix error views

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -320,7 +320,6 @@
   "console.views.device-overview.index.keysNotExposed": "Xxxx xxx xxx xxxxxxx",
   "console.views.device-payload-formatters.index.infoUplinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
   "console.views.device-payload-formatters.index.infoDownlinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
-  "console.views.error.index.backToOverview": "Xxxx xx xxx xxxxxxxx",
   "console.views.gateway-add.index.createGateway": "Xxxxxx xxxxxxx",
   "console.views.gateway-data.index.gtwData": "Xxxxxxx xxxx",
   "console.views.gateway-general-settings.index.updateSuccess": "Xxxxxxx xxxxxxx",
@@ -423,6 +422,7 @@
   "lib.shared-messages.attributes": "Xxxxxxxxxx",
   "lib.shared-messages.attributesValidateRequired": "Xxx xxxxxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
   "lib.shared-messages.automaticUpdates": "Xxxxxxxxx xxxxxxx",
+  "lib.shared-messages.backToOverview": "Xxxx xx xxxxxxxx",
   "lib.shared-messages.brand": "Xxxxx",
   "lib.shared-messages.cancel": "Xxxxxx",
   "lib.shared-messages.changeLocation": "Xxxxxx xxxxxxxx xxxxxxxx",
