console: Improve wording of event messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -6,7 +6,7 @@
   "components.events-list.event.details.index.hideRaw": "Hide raw payload",
   "components.events-list.list.error-boundary.index.title": "Error cause",
   "components.events-list.list.error-boundary.index.overviewEntry": "Something went wrong when displaying this event",
-  "components.events-list.widget.index.latestEvents": "Latest events",
+  "components.events-list.widget.index.latestEvents": "Live events",
   "components.events-list.widget.index.seeAllActivity": "See all activity",
   "components.file-input.index.selectAFile": "Select a file…",
   "components.file-input.index.changeFile": "Change file…",
@@ -568,7 +568,7 @@
   "lib.shared-messages.networkServerAddress": "Network Server address",
   "lib.shared-messages.next": "Next",
   "lib.shared-messages.noDesc": "This end device has no description",
-  "lib.shared-messages.noEvents": "There are no events to show for {entityId}",
+  "lib.shared-messages.noEvents": "Waiting for events from <pre>{entityId}</pre>…",
   "lib.shared-messages.noLocation": "No location information available",
   "lib.shared-messages.noMatch": "No items found",
   "lib.shared-messages.none": "None",
