--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -6,7 +6,7 @@
   "components.events-list.event.details.index.hideRaw": "Xxxx xxx xxxxxxx",
   "components.events-list.list.error-boundary.index.title": "Xxxxx xxxxx",
   "components.events-list.list.error-boundary.index.overviewEntry": "Xxxxxxxxx xxxx xxxxx xxxx xxxxxxxxxx xxxx xxxxx",
-  "components.events-list.widget.index.latestEvents": "Xxxxxx xxxxxx",
+  "components.events-list.widget.index.latestEvents": "Xxxx xxxxxx",
   "components.events-list.widget.index.seeAllActivity": "Xxx xxx xxxxxxxx",
   "components.file-input.index.selectAFile": "Xxxxxx x xxxxx",
   "components.file-input.index.changeFile": "Xxxxxx xxxxx",
@@ -568,7 +568,7 @@
   "lib.shared-messages.networkServerAddress": "Xxxxxxx Xxxxxx xxxxxxx",
   "lib.shared-messages.next": "Xxxx",
   "lib.shared-messages.noDesc": "Xxxx xxx xxxxxx xxx xx xxxxxxxxxxx",
-  "lib.shared-messages.noEvents": "Xxxxx xxx xx xxxxxx xx xxxx xxx {entityId}",
+  "lib.shared-messages.noEvents": "Xxxxxxx xxx xxxxxx xxxx xxxxx{entityId}x/xxxxx",
   "lib.shared-messages.noLocation": "Xx xxxxxxxx xxxxxxxxxxx xxxxxxxxx",
   "lib.shared-messages.noMatch": "Xx xxxxx xxxxx",
   "lib.shared-messages.none": "Xxxx",
