console: Rename data view to live data

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -6,7 +6,6 @@
   "components.events-list.event.details.index.hideRaw": "Xxxx xxx xxxxxxx",
   "components.events-list.list.error-boundary.index.title": "Xxxxx xxxxx",
   "components.events-list.list.error-boundary.index.overviewEntry": "Xxxxxxxxx xxxx xxxxx xxxx xxxxxxxxxx xxxx xxxxx",
-  "components.events-list.widget.index.latestEvents": "Xxxx xxxxxx",
   "components.events-list.widget.index.seeAllActivity": "Xxx xxx xxxxxxxx",
   "components.file-input.index.selectAFile": "Xxxxxx x xxxxx",
   "components.file-input.index.changeFile": "Xxxxxx xxxxx",
@@ -544,6 +543,7 @@
   "lib.shared-messages.latitudeDesc": "Xxx xxxxx-xxxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx xxxxxxx",
   "lib.shared-messages.link": "Xxxx",
   "lib.shared-messages.linked": "Xxxxxx",
+  "lib.shared-messages.liveData": "Xxxx xxxx",
   "lib.shared-messages.location": "Xxxxxxxx",
   "lib.shared-messages.locationSolved": "Xxxxxxxx xxxxxx",
   "lib.shared-messages.login": "Xxxxx",
