--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -6,7 +6,6 @@
   "components.events-list.event.details.index.hideRaw": "Hide raw payload",
   "components.events-list.list.error-boundary.index.title": "Error cause",
   "components.events-list.list.error-boundary.index.overviewEntry": "Something went wrong when displaying this event",
-  "components.events-list.widget.index.latestEvents": "Live events",
   "components.events-list.widget.index.seeAllActivity": "See all activity",
   "components.file-input.index.selectAFile": "Select a file…",
   "components.file-input.index.changeFile": "Change file…",
@@ -544,6 +543,7 @@
   "lib.shared-messages.latitudeDesc": "The north-south position in degrees, where 0 is the equator",
   "lib.shared-messages.link": "Link",
   "lib.shared-messages.linked": "Linked",
+  "lib.shared-messages.liveData": "Live data",
   "lib.shared-messages.location": "Location",
   "lib.shared-messages.locationSolved": "Location solved",
   "lib.shared-messages.login": "Login",
