console: Add generate join eui button

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -196,6 +196,7 @@
   "console.containers.gateways-table.index.ownedTabTitle": "Owned gateways",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Prefixes unavailable",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
+  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.zeroInput": "Fill with zeros",
   "console.containers.lora-cloud-form.index.token": "Token",
   "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
   "console.containers.lora-cloud-form.index.deleteToken": "Delete token",
@@ -415,7 +416,7 @@
   "lib.shared-messages.apiKeys": "API keys",
   "lib.shared-messages.appEUI": "AppEUI",
   "lib.shared-messages.appEUIJoinEUI": "AppEUI/JoinEUI",
-  "lib.shared-messages.appEUIDescription": "The AppEUI is a global application ID that uniquely identifies the owner of the end ­device. AppEUI is used for end devices with LoRaWAN versions 1.0.0-1.0.3, JoinEUI for 1.0.4+.",
+  "lib.shared-messages.appEUIDescription": "The AppEUI uniquely identifies the owner of the end device. If no AppEUI is provided by the device manufacturer (usually for development), it can be filled with zeros.",
   "lib.shared-messages.appId": "Application ID",
   "lib.shared-messages.appKey": "AppKey",
   "lib.shared-messages.appKeyDescription": "The root key to derive session keys to secure communication between the end device and the application",
@@ -536,7 +537,7 @@
   "lib.shared-messages.integrations": "Integrations",
   "lib.shared-messages.joinAccept": "Join accept",
   "lib.shared-messages.joinEUI": "JoinEUI",
-  "lib.shared-messages.joinEUIDescription": "JoinEUI identifies the Join Server. JoinEUI is used for end devices with LoRaWAN versions 1.0.4+, AppEUI for 1.0.0-1.0.3.",
+  "lib.shared-messages.joinEUIDescription": "The JoinEUI identifies the Join Server. If no JoinEUI is provided by the device manufacturer (usually for development), it can be filled with zeros.",
   "lib.shared-messages.joinServerAddress": "Join Server address",
   "lib.shared-messages.key": "key",
   "lib.shared-messages.keyEdit": "Edit API key",
