--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -196,6 +196,7 @@
   "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
   "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
+  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.zeroInput": "Xxxx xxxx xxxxx",
   "console.containers.lora-cloud-form.index.token": "Xxxxx",
   "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
   "console.containers.lora-cloud-form.index.deleteToken": "Xxxxxx xxxxx",
@@ -415,7 +416,7 @@
   "lib.shared-messages.apiKeys": "XXX xxxx",
   "lib.shared-messages.appEUI": "XxxXXX",
   "lib.shared-messages.appEUIJoinEUI": "XxxXXX/XxxxXXX",
-  "lib.shared-messages.appEUIDescription": "Xxx XxxXXX xx x xxxxxx xxxxxxxxxxx XX xxxx xxxxxxxx xxxxxxxxxx xxx xxxxx xx xxx xxx xxxxxxx. XxxXXX xx xxxx xxx xxx xxxxxxx xxxx XxXxXXX xxxxxxxx x.x.x-x.x.x, XxxxXXX xxx x.x.x+.",
+  "lib.shared-messages.appEUIDescription": "Xxx XxxXXX xxxxxxxx xxxxxxxxxx xxx xxxxx xx xxx xxx xxxxxx. Xx xx XxxXXX xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx (xxxxxxx xxx xxxxxxxxxxx), xx xxx xx xxxxxx xxxx xxxxx.",
   "lib.shared-messages.appId": "Xxxxxxxxxxx XX",
   "lib.shared-messages.appKey": "XxxXxx",
   "lib.shared-messages.appKeyDescription": "Xxx xxxx xxx xx xxxxxx xxxxxxx xxxx xx xxxxxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxx xxx xxx xxxxxxxxxxx",
@@ -536,7 +537,7 @@
   "lib.shared-messages.integrations": "Xxxxxxxxxxxx",
   "lib.shared-messages.joinAccept": "Xxxx xxxxxx",
   "lib.shared-messages.joinEUI": "XxxxXXX",
-  "lib.shared-messages.joinEUIDescription": "XxxxXXX xxxxxxxxxx xxx Xxxx Xxxxxx. XxxxXXX xx xxxx xxx xxx xxxxxxx xxxx XxXxXXX xxxxxxxx x.x.x+, XxxXXX xxx x.x.x-x.x.x.",
+  "lib.shared-messages.joinEUIDescription": "Xxx XxxxXXX xxxxxxxxxx xxx Xxxx Xxxxxx. Xx xx XxxxXXX xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx (xxxxxxx xxx xxxxxxxxxxx), xx xxx xx xxxxxx xxxx xxxxx.",
   "lib.shared-messages.joinServerAddress": "Xxxx Xxxxxx xxxxxxx",
   "lib.shared-messages.key": "xxx",
   "lib.shared-messages.keyEdit": "Xxxx XXX xxx",
