dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -129,6 +129,9 @@
   "console.components.pubsub-form.messages.selectPemFile": "Select .pem file…",
   "console.components.pubsub-form.messages.pemFileProvided": ".pem file has been provided",
   "console.components.pubsub-form.messages.useCredentials": "Use credentials",
+  "console.components.pubsub-form.messages.alreadyExistsModalTitle": "ID already exists",
+  "console.components.pubsub-form.messages.alreadyExistsModalMessage": "A Pub/Sub with the ID \"{id}\" already exists. Do you wish to replace this Pub/Sub?",
+  "console.components.pubsub-form.messages.replacePubsub": "Replace Pub/Sub",
   "console.components.rights-group.index.selectAll": "Select all",
   "console.components.rights-group.index.outOfOwnScopeRights": "This {entityType} has more rights than you have. These rights can not be modified.",
   "console.components.rights-group.index.outOfOwnScopePseudoRight": "This {entityType} has a wildcard right that you don't have. The {entityType} can therefore only be removed entirely.",
@@ -527,6 +530,7 @@
   "lib.shared-messages.homeNetIDDescription": "ID to identify the LoRaWAN network",
   "lib.shared-messages.hours": "hours",
   "lib.shared-messages.id": "ID",
+  "lib.shared-messages.idAlreadyExists": "ID already exists",
   "lib.shared-messages.import": "Import",
   "lib.shared-messages.importDevices": "Import end devices",
   "lib.shared-messages.integrations": "Integrations",
@@ -615,6 +619,7 @@
   "lib.shared-messages.pubsubs": "Pub/Subs",
   "lib.shared-messages.redirecting": "Redirecting…",
   "lib.shared-messages.refresh": "Refresh",
+  "lib.shared-messages.replaceWebhook": "Replace webhook",
   "lib.shared-messages.removeCollaborator": "Remove collaborator",
   "lib.shared-messages.resetsFCnt": "Resets frame counters",
   "lib.shared-messages.resetsJoinNonces": "Resets join nonces",
@@ -685,6 +690,7 @@
   "lib.shared-messages.validFrom": "Valid from",
   "lib.shared-messages.validTo": "Valid to",
   "lib.shared-messages.value": "value",
+  "lib.shared-messages.webhookAlreadyExistsModalMessage": "A Webhook with the ID \"{id}\" already exists. Do you wish to replace this webhook?",
   "lib.shared-messages.webhookBaseUrl": "Base URL",
   "lib.shared-messages.webhookFormat": "Webhook format",
   "lib.shared-messages.webhookId": "Webhook ID",
