--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -129,6 +129,9 @@
   "console.components.pubsub-form.messages.selectPemFile": "Xxxxxx .xxx xxxxx",
   "console.components.pubsub-form.messages.pemFileProvided": ".xxx xxxx xxx xxxx xxxxxxxx",
   "console.components.pubsub-form.messages.useCredentials": "Xxx xxxxxxxxxxx",
+  "console.components.pubsub-form.messages.alreadyExistsModalTitle": "XX xxxxxxx xxxxxx",
+  "console.components.pubsub-form.messages.alreadyExistsModalMessage": "X Xxx/Xxx xxxx xxx XX \"{id}\" xxxxxxx xxxxxx. Xx xxx xxxx xx xxxxxxx xxxx Xxx/Xxx?",
+  "console.components.pubsub-form.messages.replacePubsub": "Xxxxxxx Xxx/Xxx",
   "console.components.rights-group.index.selectAll": "Xxxxxx xxx",
   "console.components.rights-group.index.outOfOwnScopeRights": "Xxxx {entityType} xxx xxxx xxxxxx xxxx xxx xxxx. Xxxxx xxxxxx xxx xxx xx xxxxxxxx.",
   "console.components.rights-group.index.outOfOwnScopePseudoRight": "Xxxx {entityType} xxx x xxxxxxxx xxxxx xxxx xxx xxx'x xxxx. Xxx {entityType} xxx xxxxxxxxx xxxx xx xxxxxxx xxxxxxxx.",
@@ -527,6 +530,7 @@
   "lib.shared-messages.homeNetIDDescription": "XX xx xxxxxxxx xxx XxXxXXX xxxxxxx",
   "lib.shared-messages.hours": "xxxxx",
   "lib.shared-messages.id": "XX",
+  "lib.shared-messages.idAlreadyExists": "XX xxxxxxx xxxxxx",
   "lib.shared-messages.import": "Xxxxxx",
   "lib.shared-messages.importDevices": "Xxxxxx xxx xxxxxxx",
   "lib.shared-messages.integrations": "Xxxxxxxxxxxx",
@@ -615,6 +619,7 @@
   "lib.shared-messages.pubsubs": "Xxx/Xxxx",
   "lib.shared-messages.redirecting": "Xxxxxxxxxxxx",
   "lib.shared-messages.refresh": "Xxxxxxx",
+  "lib.shared-messages.replaceWebhook": "Xxxxxxx xxxxxxx",
   "lib.shared-messages.removeCollaborator": "Xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.resetsFCnt": "Xxxxxx xxxxx xxxxxxxx",
   "lib.shared-messages.resetsJoinNonces": "Xxxxxx xxxx xxxxxx",
@@ -685,6 +690,7 @@
   "lib.shared-messages.validFrom": "Xxxxx xxxx",
   "lib.shared-messages.validTo": "Xxxxx xx",
   "lib.shared-messages.value": "xxxxx",
+  "lib.shared-messages.webhookAlreadyExistsModalMessage": "X Xxxxxxx xxxx xxx XX \"{id}\" xxxxxxx xxxxxx. Xx xxx xxxx xx xxxxxxx xxxx xxxxxxx?",
   "lib.shared-messages.webhookBaseUrl": "Xxxx XXX",
   "lib.shared-messages.webhookFormat": "Xxxxxxx xxxxxx",
   "lib.shared-messages.webhookId": "Xxxxxxx XX",
