console: Refactor device title section

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -64,7 +64,6 @@
   "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
   "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
   "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
-  "console.components.entity-title-section.index.lastSeenUnavailable": "Last seen info unavailable",
   "console.components.events-list.messages.frmPayload": "FRMPayload",
   "console.components.events-list.messages.devAddr": "DevAddr",
   "console.components.events-list.messages.fPort": "FPort",
@@ -182,6 +181,7 @@
   "console.containers.device-importer.index.errorTitle": "There was an error and the operation could not be completed",
   "console.containers.device-template-format-select.index.title": "Format",
   "console.containers.device-template-format-select.index.warning": "End device template formats unavailable",
+  "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Last seen info unavailable",
   "console.containers.fetch-table.index.errorMessage": "There was an error and the list of {entity, select, applications {applications} organizations {organizations} keys {API keys} collaborators {collaborators} devices {end devices} gateways {gateways} users {users} webhooks {webhooks} other {entities}} could not be displayed",
   "console.containers.freq-plans-select.index.title": "Frequency plan",
   "console.containers.freq-plans-select.index.warning": "Frequency plans unavailable",
@@ -483,6 +483,7 @@
   "lib.shared-messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
   "lib.shared-messages.deviceIdPlaceholder": "my-new-device",
   "lib.shared-messages.deviceNamePlaceholder": "My new end device",
+  "lib.shared-messages.device": "End device",
   "lib.shared-messages.devices": "End devices",
   "lib.shared-messages.devID": "End device ID",
   "lib.shared-messages.devName": "End device name",
