--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -93,6 +93,28 @@
   "console.components.location-form.index.deleteFailure": "An error occurred and the location could not be deleted",
   "console.components.location-form.index.deleteSuccess": "Location deleted",
   "console.components.location-form.index.loadingLocation": "Loading location...",
+  "console.components.mac-settings-section.index.delayValue": "{count, plural, one {{count} second} other {{count} seconds}}",
+  "console.components.mac-settings-section.index.factoryPresetFreqDescription": "List of factory-preset frequencies. Note: order is respected.",
+  "console.components.mac-settings-section.index.factoryPresetFreqTitle": "Factory Preset Frequencies",
+  "console.components.mac-settings-section.index.freqAdd": "Add Frequency",
+  "console.components.mac-settings-section.index.frequencyPlaceholder": "e.g. 869525000 for 869,525 MHz",
+  "console.components.mac-settings-section.index.macSettings": "MAC settings",
+  "console.components.mac-settings-section.index.pingSlotFrequencyDescription": "Frequency of the class B ping slot (Hz)",
+  "console.components.mac-settings-section.index.pingSlotFrequencyTitle": "Ping Slot Frequency",
+  "console.components.mac-settings-section.index.pingSlotPeriodicityDescription": "Periodicity of the class B ping slot",
+  "console.components.mac-settings-section.index.pingSlotPeriodicityTitle": "Ping Slot Periodicity",
+  "console.components.mac-settings-section.index.pingSlotPeriodicityValue": "{count, plural, one {every second} other {every {count} seconds}}",
+  "console.components.mac-settings-section.index.resetWarning": "Resetting is insecure and makes your device susceptible for replay attacks",
+  "console.components.mac-settings-section.index.resetsFCnt": "Resets Frame Counters",
+  "console.components.mac-settings-section.index.rx1DataRateOffsetTitle": "RX1 Data Rate Offset",
+  "console.components.mac-settings-section.index.rx1DataRateOffsetDescription": "Offset  between  the  uplink  data  rate  and  the  downlink  data rate  used  to  communicate  with  the  end-device  on  the  first  reception  slot  (RX1)",
+  "console.components.mac-settings-section.index.rx1DelayDescription": "Class A RX1 delay in seconds. RX2 delay is RX1 delay + 1 second.",
+  "console.components.mac-settings-section.index.rx1DelayTitle": "RX1 Delay",
+  "console.components.mac-settings-section.index.rx2DataDateIndexDescription": "The default RX2 data rate index value the device uses after a reset",
+  "console.components.mac-settings-section.index.rx2DataRateIndexTitle": "RX2 Data Rate Index",
+  "console.components.mac-settings-section.index.rx2FrequencyDescription": "Frequency for RX2 (Hz)",
+  "console.components.mac-settings-section.index.rx2FrequencyTitle": "RX2 Frequency",
+  "console.components.mac-settings-section.index.updateSuccess": "The MAC settings updated",
   "console.components.organization-form.index.orgDescPlaceholder": "Description for my new organization",
   "console.components.organization-form.index.orgDescDescription": "Optional organization description; can also be used to save notes about the organization",
   "console.components.organization-form.index.orgIdPlaceholder": "my-new-organization",
@@ -512,6 +534,7 @@
   "lib.shared-messages.devEUI": "DevEUI",
   "lib.shared-messages.deviceAddrDescription": "Device address, issued by the Network Server or chosen by device manufacturer in case of testing range",
   "lib.shared-messages.deviceCounted": "{count, plural, one {End device} other {End devices}}",
+  "lib.shared-messages.deviceClass": "End device class",
   "lib.shared-messages.deviceDescDescription": "Optional end device description; can also be used to save notes about the end device",
   "lib.shared-messages.deviceDescPlaceholder": "Description for my new end device",
   "lib.shared-messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
@@ -701,6 +724,7 @@
   "lib.shared-messages.statusDescription": "The status of this gateway may be publicly displayed",
   "lib.shared-messages.statusUnknown": "Status unknown",
   "lib.shared-messages.success": "Success",
+  "lib.shared-messages.supportsClassB": "Supports class B",
   "lib.shared-messages.supportsClassC": "Supports class C",
   "lib.shared-messages.takeMeBack": "Take me back",
   "lib.shared-messages.termsAndCondition": "Terms and conditions",
@@ -728,6 +752,8 @@
   "lib.shared-messages.validateDelayFormat": "{field} must be a positive, whole number",
   "lib.shared-messages.validateEmail": "An email address must use exactly one \"@\" and use no special characters",
   "lib.shared-messages.validateHexLength": "{field} must be a complete hex value",
+  "lib.shared-messages.validateFreqNumberic": "All frequency values must be positive integers",
+  "lib.shared-messages.validateFreqRequired": "All frequency values are required. Please remove empty entries.",
   "lib.shared-messages.validateIdFormat": "{field} must contain only lowercase letters, numbers and dashes (-)",
   "lib.shared-messages.validateInt32": "{field} must be a whole number, negative or positive",
   "lib.shared-messages.validateLatitude": "Latitude must be a whole or decimal number between -90 and 90",
